--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,23 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-container {
+  display: flex;
+  width: 100%;
+  max-width: 100px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn-container div {
+  display: flex;
+}
+
+.btn-rest {
+  margin-top: 20px;
+  max-width: 100px;
+  width: 100%;
+  padding: 5px;
 }
 
 @keyframes App-logo-spin {
